@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE chemical-mime [
-	<!-- Root database element. -->	
+	<!-- Root database element. -->
 	<!ELEMENT chemical-mime (mime-type+)>
 	<!ATTLIST chemical-mime
 	          id CDATA #REQUIRED>
 
-	<!-- The MIME type (only chemical/*). -->	
+	<!-- The MIME type (only chemical/*). -->
 	<!ELEMENT mime-type (comment+,
 	                     (acronym+, expanded-acronym+)?,
 	                     glob+,
@@ -22,55 +22,55 @@
 	          support (yes|no) "no"
 	          added CDATA #IMPLIED>
 
-	<!-- Comment describing a document with the respective MIME type. -->	
+	<!-- Comment describing a document with the respective MIME type. -->
 	<!ELEMENT comment (#PCDATA)>
 	<!ATTLIST comment
 	          xml:lang CDATA #IMPLIED>
 
-	<!-- Comment describing the respective unexpanded MIME type acronym. -->	
+	<!-- Comment describing the respective unexpanded MIME type acronym. -->
 	<!ELEMENT acronym (#PCDATA)>
 	<!ATTLIST acronym
 	          xml:lang CDATA #IMPLIED>
 
-	<!-- Comment describing the respective unexpanded MIME type acronym. -->	
+	<!-- Comment describing the respective unexpanded MIME type acronym. -->
 	<!ELEMENT expanded-acronym (#PCDATA)>
 	<!ATTLIST expanded-acronym
 	          xml:lang CDATA #IMPLIED>
 
-	<!-- File pattern of the MIME type. -->	
+	<!-- File pattern of the MIME type. -->
 	<!ELEMENT glob EMPTY>
 	<!ATTLIST glob
             pattern CDATA #REQUIRED>
-	
-	<!--  -->	
+
+	<!--  -->
 	<!ELEMENT root-XML EMPTY>
 	<!ATTLIST root-XML
 	          namespaceURI CDATA #REQUIRED
 	          localName CDATA #REQUIRED>
-	
-	<!--  -->	
+
+	<!--  -->
 	<!ELEMENT sub-class-of EMPTY>
 	<!ATTLIST sub-class-of
 	          type CDATA #REQUIRED>
 
-	<!--  -->	
+	<!--  -->
 	<!ELEMENT alias EMPTY>
 	<!ATTLIST alias
 	          type CDATA #REQUIRED>
 
-	<!-- Conflicting MIME-types. -->	
+	<!-- Conflicting MIME-types. -->
 	<!ELEMENT conflicts EMPTY>
 	<!ATTLIST conflicts
 	          type CDATA #REQUIRED
 	          gnome (yes|no) "yes"
 	          kde (yes|no) "yes">
 
-	<!--  -->	
+	<!--  -->
 	<!ELEMENT magic (match)+>
 	<!ATTLIST magic
 	          priority CDATA #IMPLIED>
 
-	<!--  -->	
+	<!--  -->
 	<!ELEMENT match (match)*>
 	<!ATTLIST match
 	          offset CDATA #REQUIRED
@@ -78,13 +78,13 @@
 	          value CDATA #REQUIRED
 	          mask CDATA #IMPLIED>
 
-	<!-- Icon for GNOME 2.4 and/or KDE 3.x system. -->	
+	<!-- Icon for GNOME 2.4 and/or KDE 3.x system. -->
 	<!ELEMENT icon EMPTY>
 	<!ATTLIST icon
 	          gnome CDATA #IMPLIED
 	          kde CDATA #IMPLIED>
-	
-	<!-- List of applications supporting the respective MIME type. -->	
+
+	<!-- List of applications supporting the respective MIME type. -->
 	<!ELEMENT supported-by (application+)>
 	<!ELEMENT application EMPTY>
 	<!ATTLIST application
@@ -92,8 +92,8 @@
 	          read CDATA #IMPLIED
 	          write CDATA #IMPLIED
 	          package CDATA #IMPLIED>
-	
-	<!-- URL where to find the MIME/file type specification. -->	
+
+	<!-- URL where to find the MIME/file type specification. -->
 	<!ELEMENT specification EMPTY>
 	<!ATTLIST specification
 	          url CDATA #REQUIRED>
@@ -253,13 +253,13 @@
 		<glob pattern="*.gb"/>
 		<glob pattern="*.gen"/>
 		<sub-class-of type="text/plain"/>
+		<icon/>
 		<supported-by>
 			<application name="emboss"/>
 			<application name="biojava"/>
 			<application name="bioperl"/>
 			<application name="biopython"/>
 		</supported-by>
-		<icon/>
 	</mime-type>
 
 	<mime-type type="chemical/x-hin" support="yes" added="0.1.91">
